Errores con fixedPositions solucionados:  - Se tiene en cuenta en los visualFilter (no se deja un fieldset visible "vacío"  - Errores con la altura cuando se está previsualizando una imagen
#33109


git-svn-id: http://dev.irontec.com/svn/klearMatrix/trunk/modules/klearMatrix@654 6214b6a1-08aa-4791-a4b5-1ce3821c3f96

--- a/assets/css/klearMatrix.css
+++ b/assets/css/klearMatrix.css
@@ -181,7 +181,7 @@ dl.multiLanguage dd.copied span.copied {
 
 .klearMatrix_form div.containerFixed {
     display: inline-block;
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 
 .klearMatrix_form fieldset.superContainer {
